--- a/.github/workflows/stats-crawler.yml
+++ b/.github/workflows/stats-crawler.yml
@@ -17,5 +17,5 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Execute script to get a list of lemmy instances
-      run: "stats-crawler.sh"
+      run: "./stats-crawler.sh"
       shell: bash
