--- a/.github/workflows/stats-crawler.yml
+++ b/.github/workflows/stats-crawler.yml
@@ -16,13 +16,13 @@ jobs:
 
     - uses: actions/checkout@v3
 
-    - name: Execute script to get a list of lemmy instances
-      run: "./stats-crawler.sh"
-      shell: bash
-
-    - name: Execute script to generate README.md file
-      run: "./generate_readme.py"
-      shell: bash
+#    - name: Execute script to get a list of lemmy instances
+#      run: "./stats-crawler.sh"
+#      shell: bash
+#
+#    - name: Execute script to generate README.md file
+#      run: "./generate_readme.py"
+#      shell: bash
 
     - name: Push changes to git
       run: |
