--- a/.github/workflows/stats-crawler.yml
+++ b/.github/workflows/stats-crawler.yml
@@ -21,14 +21,14 @@ jobs:
 #    - name: Execute script to get a list of lemmy instances
 #      run: "./stats-crawler.sh"
 #      shell: bash
-#
-#    - name: Execute script to generate README.md file
-#      run: "./generate_readme.py"
-#      shell: bash
+
+    - name: Execute script to generate README.md file
+      run: "./generate_readme.py"
+      shell: bash
 
     - name: test
       run: |
-        echo "test" > lemmy-stats-crawler.json
+        echo "test2" > lemmy-stats-crawler.json
 
     - name: Push changes to git
       run: |
