--- a/.github/workflows/stats-crawler.yml
+++ b/.github/workflows/stats-crawler.yml
@@ -18,16 +18,17 @@ jobs:
 
     - uses: actions/checkout@v3
 
-    - name: Execute script to get a list of lemmy instances
-      run: "./stats-crawler.sh"
+    - name: Update README.md file
       shell: bash
-
-    - name: Execute script to generate README.md file
-      run: "./generate_readme.py"
-      shell: bash
-
-    - name: Push changes to git
       run: |
+
+        # first generate the lemmy-stats-crawler.json file
+        ./stats-crawler.sh
+
+        # process the json file and update the README.md file
+        ./generate_readme.py
+
+        # push new README to GitHub
         git config --global user.name 'maltfield'
         git config --global user.email 'michael@michaelaltfield.net'
         git commit -am "Auto-update"
