ugh, such long iteration times for stupid errors
 The following paths are ignored by one of your .gitignore files:
README.md
hint: Use -f if you really want to add them.
hint: Turn this message off by running
hint: "git config advice.addIgnoredFile false"
Error: Process completed with exit code 1.

--- a/.github/workflows/stats-crawler.yml
+++ b/.github/workflows/stats-crawler.yml
@@ -31,7 +31,7 @@ jobs:
         # push new README to GitHub
         git config --global user.name 'maltfield'
         git config --global user.email 'michael@michaelaltfield.net'
-        git add README.md
+        git add -f README.md
         git commit -am "Auto-update"
         git push
 
