added python depends

--- a/.github/workflows/stats-crawler.yml
+++ b/.github/workflows/stats-crawler.yml
@@ -22,6 +22,9 @@ jobs:
       shell: bash
       run: |
 
+        # install depends
+        sudo apt-get install python3-pandas  python3-tabulate
+
         # first generate the lemmy-stats-crawler.json file
         ./stats-crawler.sh
 
