--- a/.github/workflows/stats-crawler.yml
+++ b/.github/workflows/stats-crawler.yml
@@ -8,6 +8,8 @@ on:
 #    branches: [ master ]
 #  pull_request:
 #    branches: [ master ]
+  schedule:
+    - cron: 20 * * * * # every hour, 20 minutes past the hour
 
 jobs:
 
