attempt to fix errors on apt install
 * https://github.com/maltfield/awesome-lemmy-instances/actions/runs/5738940061/job/15553537433

2023-08-02T12:42:25.0114064Z ##[group]Run # install depends
2023-08-02T12:42:25.0114483Z [36;1m[0m
2023-08-02T12:42:25.0114749Z [36;1m# install depends[0m
2023-08-02T12:42:25.0115165Z [36;1msudo apt-get install python3-pandas python3-tabulate pkg-config libssl-dev[0m
2023-08-02T12:42:25.0115550Z [36;1m[0m
2023-08-02T12:42:25.0115892Z [36;1m# generate the lemmy-stats-crawler.json file[0m
2023-08-02T12:42:25.0116239Z [36;1m./stats-crawler.sh[0m
2023-08-02T12:42:25.0116489Z [36;1m[0m
2023-08-02T12:42:25.0116759Z [36;1m# get uptimes of lemmy instances[0m
2023-08-02T12:42:25.0117060Z [36;1m./get-uptime.sh[0m
2023-08-02T12:42:25.0117304Z [36;1m[0m
2023-08-02T12:42:25.0117617Z [36;1m# process the json file and update the README.md file[0m
2023-08-02T12:42:25.0117958Z [36;1m./generate_readme.py[0m
2023-08-02T12:42:25.0118205Z [36;1m[0m
2023-08-02T12:42:25.0118465Z [36;1m# push new README to GitHub[0m
2023-08-02T12:42:25.0118803Z [36;1mgit config --global user.name 'maltfield'[0m
2023-08-02T12:42:25.0119255Z [36;1mgit config --global user.email 'michael@michaelaltfield.net'[0m
2023-08-02T12:42:25.0180109Z shell: /usr/bin/bash --noprofile --norc -e -o pipefail {0}
2023-08-02T12:42:25.0180494Z ##[endgroup]
2023-08-02T12:42:26.0077989Z Reading package lists...
2023-08-02T12:42:26.2465632Z Building dependency tree...
2023-08-02T12:42:26.2482165Z Reading state information...
2023-08-02T12:42:26.3829557Z pkg-config is already the newest version (0.29.2-1ubuntu3).
2023-08-02T12:42:26.3829981Z libssl-dev is already the newest version (3.0.2-0ubuntu1.10).
2023-08-02T12:42:26.3830351Z The following additional packages will be installed:
2023-08-02T12:42:26.3830757Z   blt fonts-font-awesome fonts-lyx libaec0 libblosc1 libboost-dev
2023-08-02T12:42:26.3833295Z   libboost1.74-dev libclang-cpp11 libhdf5-103-1 libimagequant0 libjs-jquery-ui
2023-08-02T12:42:

--- a/.github/workflows/stats-crawler.yml
+++ b/.github/workflows/stats-crawler.yml
@@ -25,6 +25,7 @@ jobs:
       run: |
 
         # install depends
+        sudo apt-get update
         sudo apt-get install python3-pandas python3-tabulate pkg-config libssl-dev
 
         # generate the lemmy-stats-crawler.json file
