updated workflow to fetch the age
 * https://github.com/maltfield/awesome-lemmy-instances/actions/runs/6032120395/job/16366821130

  2023-08-31T01:56:52.8862068Z Traceback (most recent call last):
  2023-08-31T01:56:52.8863502Z   File "/home/runner/work/awesome-lemmy-instances/awesome-lemmy-instances/./generate_readme.py", line 121, in <module>
  2023-08-31T01:56:52.8864343Z     with open( AGE_FILENAME ) as json_data:
  2023-08-31T01:56:52.8865125Z FileNotFoundError: [Errno 2] No such file or directory: 'age.json'

--- a/.github/workflows/stats-crawler.yml
+++ b/.github/workflows/stats-crawler.yml
@@ -34,6 +34,9 @@ jobs:
         # get uptimes of lemmy instances
         ./get-uptime.sh
 
+        # get age of lemmy instances
+        ./get-age.sh
+
         # process the json file and update the README.md file
         ./generate_readme.py
 
